<resources>
    <string name="app_name">书·心</string>
    <string name="book_talk">吐槽(%s)</string>
    <string name="dialog_show_single_commit_log_tips">提交信息：%s</string>
    <string name="dialog_show_single_commit_log_time">提交时间：%s</string>
    <string name="dialog_show_single_commit_log_origin_content">前一版本内容：%s</string>
    <string name="dialog_show_single_commit_log_cur_content">当前版本内容：%s</string>
    <string name="dialog_show_single_commit_log_author">提交者：%s</string>
    <string name="item_essay_list_last_commit">最后一次提交，提交者账号:%1$s\n提交信息:%2$s\n提交时间:%3$s</string>
    <string formatted="false" name="tts_toast_format">缓冲进度为%d%%，播放进度为%d%%</string>
    <string name="chat_self_add_suc">发送成功</string>
    <string name="chat_self_show_empty">无日记内容</string>
    <string name="chat_self_send_empty">发送内容不能为空</string>

    <string name="string_level">Lv.%d</string>
    <string name="string_level_cur_words">%1$d / %2$d 总字数:%3$d</string>
    <string name="behavior_bottom_buttom" >com.example.greatbook.behavior.BottomButtonBehavior</string>
    <integer name="up_level_need">1000</integer>
    <string name="net_err">请保证网络连接</string>
</resources>
